--- a/PruebaGitHub2/PruebaGitHub2/PruebaGitHub2.csproj
+++ b/PruebaGitHub2/PruebaGitHub2/PruebaGitHub2.csproj
@@ -107,9 +107,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Web.config" />
+    <Content Include="WebServiceDePrueba.asmx" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebServiceDePrueba.asmx.cs">
+      <DependentUpon>WebServiceDePrueba.asmx</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
